[package]
name = "language_evolution"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.8.4"
structopt = { version = "0.3.25", default-features = false  }
